# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_hooks/: detect_no_commit_comments.py
